#1268: Converted GetTags UC to extend BasePaginatedMultipleEntitiesCommand